230807 :: 코드잇 기본 셋팅

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,15 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>주사위 게임</title>
+    <title>가위바위보</title>
+    <style>
+      body {
+        background-color: #40089a;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
   </body>
 </html>
